@@ -1,47 +1,52 @@
-The VGA font is needed if you're running applications that use the
-IBMPC character set. If a via font is not installed on your system,
+Many character oriented applications were written with the linux
+console as the platform in mind, and although many of them do well
+when run in xterm emulation (which is konsole's default), don't
+look as pleasant as the original.
+
+Konsole has lately improved it's support for the linux console.
+Especially using the new session mechanism makes running the
+linux console under X11 being a snap.
+
+Simple choose "Linux console" from the "New" menu (or click the
+right mouse button while holding down the control key).
+
+To get proper support of graphic characters, you need a VGA font
+being installed, too.  If a VGA font is not installed on your system,
 you may like to use the one supplied in the konsole/other directory.
-
-Most notably, you need this font if you want to run a Linux console
-or like to connect to an ANSI BBS.
-
 
 To install the font proceed as follows:
 
   cp konsole/other/vga.pcf.gz /usr/X11R6/lib/X11/fonts/misc
   mkfontdir                   /usr/X11R6/lib/X11/fonts/misc
 
-To run a Linux console emulation within konsole, choose the
-VGA font from the Options/Font menu. Within a shell, type
-
-  export TERM=linux
-
-to make applications aware of the emulation.
-
-
-Many character oriented applications were written with the linux
-console as the platform in mind, and although many of them do well
-when run in xterm emulation (which is konsole's default), don't
-look as pleasant as the original.
-
 Depending on the application, you might need to switch to dark
-background, too, for the best results.
+background, too, for the best results. (Konsole does this
+automatically for you when you select the linux console as
+suggested above).
 
 Please note that those applications may not react properly on
-changing the window size. Mouse handling in mc is known not to
-work when run with TERM=linux in an xterminal, because of a
-bug in mc itself.
+changing the window size. Often they ignore it completely or
+behave strange in other ways. I even saw one application dying
+from the shock of noticing that the linux console has simply
+changed it's size (Debian's dselect). Since the Linux console
+can definitely be resized (not only when running the popular
+frame buffer console), this behavior is to be considered a bug
+within these applications.
+
+Mouse handling in mc is known not to work when run with TERM=linux
+in an xterminal, because of a bug in mc itself. In general, mouse
+aware applications might create further trouble because the mouse
+is handled differently within the linux console (which uses gpm)
+and X11. As soon as konsole has matured a little more, i'll try
+to get in contact with the authors of the mouse handling for the
+linux console and will try to find out if making a copy/paste between
+X11 and gpm is really impossible. The mouse material in the ncurses
+is in need of some upgrade also, basically for the same reasons.
 
 
-Try
+Anyway, try
 
   cd /usr/src/linux
   make menuconfig
 
 for a pleasing view.
-
-
-The central lack of konsole for a proper support of the linux
-console emulation are the functions keys (F1-F10). Support for
-the linux console emulation will be improved in a future version
-of konsole.
