@@ -1,3 +1,7 @@
+29 Oct 1998
+- sessions reactived
+- Session/Command menu additionally with Shift/Control+RightMouse
+- Function keys adjusted for Linux console emulation.
 28 Oct 1998
 - tracking down licence issues
 - spent far to much time on explaining them
